; ModuleID = '/home/carl/AnghaBench/tmux/extr_grid-view.c_grid_view_string_cells.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_grid-view.c_grid_view_string_cells.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grid = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @grid_view_string_cells(%struct.grid* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.grid*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.grid* %0, %struct.grid** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.grid*, %struct.grid** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @grid_view_x(%struct.grid* %9, i32 %10)
  store i32 %11, i32* %6, align 4
  %12 = load %struct.grid*, %struct.grid** %5, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @grid_view_y(%struct.grid* %12, i32 %13)
  store i32 %14, i32* %7, align 4
  %15 = load %struct.grid*, %struct.grid** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %8, align 4
  %19 = call i8* @grid_string_cells(%struct.grid* %15, i32 %16, i32 %17, i32 %18, i32* null, i32 0, i32 0, i32 0)
  ret i8* %19
}

declare dso_local i32 @grid_view_x(%struct.grid*, i32) #1

declare dso_local i32 @grid_view_y(%struct.grid*, i32) #1

declare dso_local i8* @grid_string_cells(%struct.grid*, i32, i32, i32, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
